@@ -24,6 +24,7 @@
         - Fix init of matches.
         - Fix tests on text method to accept undef for Mojo >= 9.21.
         - Plugin::TagHelpers::ContenBlock now on CPAN.
+        - Fix navigation behaviour for folded subdirectories.
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
